# sr_multiplot_config

hand_e_multiplot/: CMakeLists.txt  package.xml
hand_h_multiplot/: CMakeLists.txt  package.xml
hand_h_multiplot/xml/: Torque_control.xml  finger_jitter_test.xml  motor_temp_current.xml
hand_h_setup/: All_encoders.xml  F0_encoders.xml  F1_Encoders  F1_encoders.xml  F2_encoders.xml  F3_encoders.xml  Torque_control.xml  motor_temp_current.xml
